Coming Soon Template added

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
     ================================================== -->
     <script src="js/modernizr.js"></script>
     <script src="js/pace.min.js"></script>
-
+    <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/baa6ebfc5ece282df9d3667a3/0b9547c23742b3e551825db01.js");</script>
+    
     <!-- favicons
     ================================================== -->
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
@@ -67,7 +68,7 @@
 
                     <div class="home-content__subscribe">
                         <form id="mc-form" class="group" novalidate="true">
-                            <input type="email" value="" name="EMAIL" class="email" id="mc-email" placeholder="contact@guptanitish.com" required="">
+                            <input type="email" value="" name="EMAIL" class="email" id="mc-email" placeholder="Email Address" required="">
                             <input type="submit" name="subscribe" value="Notify Me">
                             <label for="mc-email" class="subscribe-message"></label>
                         </form>
